igo/css/style.css
/* ... */
.f-50 > * {
  width: 48%;
}

#budget-list .current {
  color: #2ecc71;
}

#budget-bar {
  background: white;
  color: black;
  position: relative;
  text-align: right;
  height: 1em;
}

#budget-bar, #budget-bar div {
  border-radius: 0.5em;
}

#budget-bar div {
  background: #2ecc71;
  display: block;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

#budget-bar div.excess {
  background: #e74c3c;
  width: 100% !important;
}

#budget-bar #budget-max, #budget-bar #budget-spent {
  position: absolute;
  font-size: 0.78em;
  top: 0.1em;
}

#budget-bar #budget-max::after, #budget-bar #budget-spent::after {
  content: " €";
}

#budget-bar #budget-max {
  right: 0.5em;
}

#budget-bar #budget-spent {
  left: 0.5em;
}

#new-contact-btn, #new-budget-button {
  width: calc(100% - 1em);
  margin: 0.5em;
}

#confirmation-box {
  position: absolute;
  top: 1em;
  display: none;
  flex-direction: column;
  left: 1em;
  background: #34495e;
  width: calc(100% - 2em);
  height: calc(100% - 2em);
  color: white;
  padding: 0.5em;
  box-shadow: 3px 3px 0 #223242;
  z-index: 2000;
}

#confirmation-box.active {
  display: flex;
}

#confirmation-box p {
  margin-top: 0;
}

#confirmation-box > div:last-of-type {
  margin-top: auto;
}

#overlay {
  position: absolute;
  background: rgba(0, 0, 0, 0.7);
  z-index: 1000;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  display: none;
}

.picker {
  height: calc(100% - 0.4em);
  bottom: 0.2em;
  left: 0.2em;
  width: calc(100% - 0.4em);
  top: 0.2em;
  border-radius: .8em;
}

#overlay.active {
  display: block;
}

#gps {
  background-image: url(../assets/map.png);
  background-size: 100% 100%;
}

#gps-path {
  background-image: url(../assets/route1.png);
  background-size: 100% 100%;
}

#gps-path, #gps {
  padding: 0.5em;
}

.gps-search {
  margin: 0;
  display: flex;
  align-items: center;
  box-shadow: 0px 0px 4px #0000006e;
}

.input-with-icon input, .gps-search input {
  padding: 0em;
  border-radius: 0em;
  margin: 0 0.5em 0 0;
  width: 86%;
}

.gps-search input:focus {
  outline: none;
}

.current-position {
  position: absolute;
  bottom: 5.3em;
  left: 8.97em;
  color: #0AC92B;
  -webkit-text-stroke: 1px #000;
  z-index: 1;
}

#gps-route {
  background-image: url(../assets/maps/1.png);
  background-size: 100% 100%;
}

.destination {
  position: absolute;
  top: 1.67em;
  left: 2.37em;
  color: #f00;
  -webkit-text-stroke: 1px #000;
}

#start-route-button {
  position: absolute;
  left: 25%;
  bottom: 5px;
  align-self: center;
  background-color: #3498db;
  border: none;
  color: white;
  width: 6em;
  height: 2em;
  box-shadow: 0px 0px 4px #0000006e;
  opacity: 50%;
}

#end-route-button {
  position: absolute;
  left: 25%;
  bottom: 5px;
  align-self: center;
  background-color: #3498db;
  border: none;
  color: white;
  width: 6em;
  height: 2em;
  box-shadow: 0px 0px 4px #0000006e;
  opacity: 50%;
}

#controls {
  width: 18em;
  box-shadow: 0 0 17px rgba(0, 0, 0, 0.2);
  height: 4em;
  position: fixed;
  bottom: 1em;
  border-radius: 0.5em;
  right: 1em;
  display: flex;
}

#controls button {
  margin: 0;
  border-radius: 0;
  border-right: 1px solid #eee;
}

#controls button:first-of-type {
  border-bottom-left-radius: 0.5em;
  border-top-left-radius: 0.5em;
}

#controls button:last-of-type {
  border-bottom-right-radius: 0.5em;
  border-top-right-radius: 0.5em;
}

#controls button:last-of-type {
  border-right: none;
}

#controls span,
#controls img {
  width: 2rem;
  font-size: 1.8em;
}

#screen-space::-webkit-scrollbar {
  width: 5px;
  border-bottom: 10px;
}

#screen-space::-webkit-scrollbar-track {
  background: transparent;
  border-radius: 8px;
}

#screen-space::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.5);
  border-radius: 8px;
}

#places-list .empty-content > p {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  text-align: center;
  margin: 0;
  color: rgba(255, 255, 255, 0.8);
}

#place-desc > div:first-of-type {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.picker-dialog {
  background: #34495e;
  color: white;
  border: 0;
}

.picker-header {
  padding: 0.5em;
  border: 0;
}

.picker-cancel, .picker-confirm {
  margin: 0.5em;
  padding: 0.5em;
  width: 50%;
}

.picker-cancel {
  background: #e74c3c;
  color: white;
  margin-right: 0.25em;
}

.picker-cancel:hover, .picker-cancel:focus, .picker-cancel:active {
  background: #e74c3c;
  box-shadow: inset 0 0 17px rgba(0, 0, 0, 0.2);
}

.picker-confirm {
  background: #27ae60;
  color: white;
  margin-left: 0.25em;
}

.picker-confirm:hover, .picker-confirm:focus, .picker-confirm:active {
  background: #27ae60;
  box-shadow: inset 0 0 17px rgba(0, 0, 0, 0.2);
}

.picker-close {
  margin: 0;
  height: 2rem;
  width: 2rem;
}

#place-booking > div:first-of-type {
  display: flex;
  justify-content: space-between;
}

#place-booking > div:first-of-type > input {
  margin-bottom: 0;
  width: 38%;
}

#place-booking > div:first-of-type > input:first-of-type {
  width: 58%;
}

.picker-cell__body:before {
  background-image: linear-gradient(0deg,hsla(0,0%,100%,0),#060a0e);
  top: 0;
}

.picker-cell__body:after {
  background-image: linear-gradient(180deg,hsla(0,0%,100%,0),#060a0e);
  bottom: 0;
}

.picker-cell+.picker-cell {
  border-left: 1px solid rgba(0,0,0,0.5);
}

.picker-picked {
  color: white;
}

.picker-footer {
  border: 0;
  justify-content: space-between;
}

.picker-fixed .picker-footer {
  display: flex;
}

.gps-results {
  margin: 0.5em 0 0;
  padding: 0;
  list-style: none;
  background: white;
  color: black;
  border-radius: 0.3em;
  box-shadow: 0px 0px 4px #0000006e;
  height: 5.7em;
  overflow: auto;
}

.gps-results li {
  padding: 0.5em;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  cursor: pointer;
}

.gps-results li:hover {
  background: rgba(0, 0, 0, 0.05);
}

#person-info > div {
  display: flex;
}
/* ... */

